* Minor css fixes * Implemented catalog setting 'LabelAsNewForMaxDays' * Implemented catalog setting 'ShowDiscountSign' * Updated FontAwesome to version 3.2.1

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -194,7 +194,15 @@
                 @Html.ValidationMessageFor(model => model.ShowDimensions)
             </td>
         </tr>
-
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.ShowDiscountSign)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.ShowDiscountSign)
+                @Html.ValidationMessageFor(model => model.ShowDiscountSign)
+            </td>
+        </tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.IgnoreDiscounts)
@@ -264,147 +272,175 @@
         
 @helper TabProductListSettings()
 {
-    <table>
-        @*codehint: sm-add end*@
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.AllowProductSorting)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.AllowProductSorting)
-                @Html.ValidationMessageFor(model => model.AllowProductSorting)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.AllowProductViewModeChanging)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.AllowProductViewModeChanging)
-                @Html.ValidationMessageFor(model => model.AllowProductViewModeChanging)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ShowProductsFromSubcategories)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.ShowProductsFromSubcategories)
-                @Html.ValidationMessageFor(model => model.ShowProductsFromSubcategories)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ShowCategoryProductNumber)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.ShowCategoryProductNumber)
-                @Html.ValidationMessageFor(model => model.ShowCategoryProductNumber)
-            </td>
-        </tr>
-        <tr id="pnlShowCategoryProductNumberIncludingSubcategories">
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ShowCategoryProductNumberIncludingSubcategories)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.ShowCategoryProductNumberIncludingSubcategories)
-                @Html.ValidationMessageFor(model => model.ShowCategoryProductNumberIncludingSubcategories)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.CategoryBreadcrumbEnabled)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.CategoryBreadcrumbEnabled)
-                @Html.ValidationMessageFor(model => model.CategoryBreadcrumbEnabled)
-            </td>
-        </tr>
-        <!-- codehint: sm-add -->
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ShowDeliveryTimesInProductLists)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.ShowDeliveryTimesInProductLists)
-                @Html.ValidationMessageFor(model => model.ShowDeliveryTimesInProductLists)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ShowBasePriceInProductLists)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.ShowBasePriceInProductLists)
-                @Html.ValidationMessageFor(model => model.ShowBasePriceInProductLists)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ShowColorSquaresInLists)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.ShowColorSquaresInLists)
-                @Html.ValidationMessageFor(model => model.ShowColorSquaresInLists)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.DefaultPageSizeOptions)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.DefaultPageSizeOptions)
-                @Html.ValidationMessageFor(model => model.DefaultPageSizeOptions)
-            </td>
-        </tr>
+    <fieldset>
+        <legend>@T("Common.Navigation")</legend>
+        <table>
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.ShowProductsFromSubcategories)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.ShowProductsFromSubcategories)
+                    @Html.ValidationMessageFor(model => model.ShowProductsFromSubcategories)
+                </td>
+            </tr>
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.ShowCategoryProductNumber)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.ShowCategoryProductNumber)
+                    @Html.ValidationMessageFor(model => model.ShowCategoryProductNumber)
+                </td>
+            </tr>
+            <tr id="pnlShowCategoryProductNumberIncludingSubcategories">
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.ShowCategoryProductNumberIncludingSubcategories)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.ShowCategoryProductNumberIncludingSubcategories)
+                    @Html.ValidationMessageFor(model => model.ShowCategoryProductNumberIncludingSubcategories)
+                </td>
+            </tr>
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.CategoryBreadcrumbEnabled)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.CategoryBreadcrumbEnabled)
+                    @Html.ValidationMessageFor(model => model.CategoryBreadcrumbEnabled)
+                </td>
+            </tr>
+        </table>
+    </fieldset>
+    
+    <fieldset>
+        <legend>@T("Common.List")</legend>
+        <table>
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.AllowProductSorting)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.AllowProductSorting)
+                    @Html.ValidationMessageFor(model => model.AllowProductSorting)
+                </td>
+            </tr>
+             <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.DefaultViewMode)
+                </td>
+                <td class="adminData">
+				    @Html.SettingOverrideCheckbox(model => Model.DefaultViewMode)
+                    @Html.DropDownListFor(model => model.DefaultViewMode, Model.AvailableDefaultViewModes)
+                    @Html.ValidationMessageFor(model => model.DefaultViewMode)
+                </td>
+            </tr>
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.AllowProductViewModeChanging)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.AllowProductViewModeChanging)
+                    @Html.ValidationMessageFor(model => model.AllowProductViewModeChanging)
+                </td>
+            </tr>
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.DefaultPageSizeOptions)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.DefaultPageSizeOptions)
+                    @Html.ValidationMessageFor(model => model.DefaultPageSizeOptions)
+                </td>
+            </tr>
+        </table>
+    </fieldset>
+    
+    <fieldset>
+        <legend>@T("Admin.Catalog.Products")</legend>
+        <table>
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.ShowDeliveryTimesInProductLists)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.ShowDeliveryTimesInProductLists)
+                    @Html.ValidationMessageFor(model => model.ShowDeliveryTimesInProductLists)
+                </td>
+            </tr>
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.ShowBasePriceInProductLists)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.ShowBasePriceInProductLists)
+                    @Html.ValidationMessageFor(model => model.ShowBasePriceInProductLists)
+                </td>
+            </tr>
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.ShowColorSquaresInLists)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.ShowColorSquaresInLists)
+                    @Html.ValidationMessageFor(model => model.ShowColorSquaresInLists)
+                </td>
+            </tr>
 
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.NumberOfProductTags)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.NumberOfProductTags)
-                @Html.ValidationMessageFor(model => model.NumberOfProductTags)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ProductsByTagPageSize)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.ProductsByTagPageSize)
-                @Html.ValidationMessageFor(model => model.ProductsByTagPageSize)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.DefaultViewMode)
-            </td>
-            <td class="adminData">
-				@Html.SettingOverrideCheckbox(model => Model.DefaultViewMode)
-                @Html.DropDownListFor(model => model.DefaultViewMode, Model.AvailableDefaultViewModes)
-                @Html.ValidationMessageFor(model => model.DefaultViewMode)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ProductsByTagAllowCustomersToSelectPageSize)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.ProductsByTagAllowCustomersToSelectPageSize)
-                @Html.ValidationMessageFor(model => model.ProductsByTagAllowCustomersToSelectPageSize)
-            </td>
-        </tr>
-        <tr id="pnlTagPageSizeOptions">
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ProductsByTagPageSizeOptions)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.ProductsByTagPageSizeOptions)
-                @Html.ValidationMessageFor(model => model.ProductsByTagPageSizeOptions)
-            </td>
-        </tr>
-    </table>
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.LabelAsNewForMaxDays)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.LabelAsNewForMaxDays)
+                    @Html.ValidationMessageFor(model => model.LabelAsNewForMaxDays)
+                </td>
+            </tr>
+        </table>
+    </fieldset>
+    
+    <fieldset>
+        <legend>@T("Admin.Catalog.ProductTags")</legend>
+        <table>
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.NumberOfProductTags)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.NumberOfProductTags)
+                    @Html.ValidationMessageFor(model => model.NumberOfProductTags)
+                </td>
+            </tr>
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.ProductsByTagPageSize)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.ProductsByTagPageSize)
+                    @Html.ValidationMessageFor(model => model.ProductsByTagPageSize)
+                </td>
+            </tr>
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.ProductsByTagAllowCustomersToSelectPageSize)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.ProductsByTagAllowCustomersToSelectPageSize)
+                    @Html.ValidationMessageFor(model => model.ProductsByTagAllowCustomersToSelectPageSize)
+                </td>
+            </tr>
+            <tr id="pnlTagPageSizeOptions">
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.ProductsByTagPageSizeOptions)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.ProductsByTagPageSizeOptions)
+                    @Html.ValidationMessageFor(model => model.ProductsByTagPageSizeOptions)
+                </td>
+            </tr>
+        </table>
+    </fieldset>
 }
 
 @helper TabUserSettings()
