Updated System.Web.Optimization to the latest version and began refactoring Bundling

--- a/src/Plugins/ExternalAuth.Facebook/Views/ExternalAuthFacebook/PublicInfo.cshtml
+++ b/src/Plugins/ExternalAuth.Facebook/Views/ExternalAuthFacebook/PublicInfo.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = "";
 
-    Html.AddCssFileParts(@Url.Content("~/Plugins/ExternalAuth.Facebook/Content/facebookstyles.css"));    
+    Html.AddCssFileParts(true, "~/Plugins/ExternalAuth.Facebook/Content/facebookstyles.css");    
 }
 <fieldset class="oauth-login-facebook">
     <legend>@T("Plugins.ExternalAuth.Facebook.Login")</legend>
