--- a/src/Presentation/SmartStore.Web/Themes/Mobile/Views/Shared/Head.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Mobile/Views/Shared/Head.Mobile.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
-    Html.AppendCssFileParts(Url.Content("~/Themes/Mobile/Content/jquery.mobile-1.1.1.min.css"));
-    Html.AppendCssFileParts(Url.Content("~/Themes/Mobile/Content/styles.css"));
+    Html.AppendCssFileParts(
+        "~/Themes/Mobile/Content/jquery.mobile-1.1.1.min.css",
+        "~/Themes/Mobile/Content/styles.css");
 }
