--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Picture.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Picture.cshtml
@@ -10,11 +10,12 @@
     int pictureId = Model.HasValue ? Model.Value : 0; // codehint: sm-add
     var picture = pictureService.GetPictureById(pictureId); // codehint: sm-edit
 
-    Html.AddCssFileParts(Url.Content("~/Content/fileupload/jquery.fileupload-single-ui.css")); // codehint: sm-add
+    Html.AddCssFileParts("~/Content/fileupload/jquery.fileupload-single-ui.css");
+    Html.AddScriptParts(
+        "~/Content/fileupload/jquery.iframe-transport.js",
+        "~/Content/fileupload/jquery.fileupload.js",
+        "~/Content/fileupload/jquery.fileupload-single-ui.js");
 }
-
-@*codehint: sm-add*@
-@Scripts.Render("~/bundles/fileupload-single") 
 
 <div id="@clientId" class="fileupload" style="display: inline-block;">
     
