--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.Mobile.cshtml
@@ -12,7 +12,7 @@
     @Html.Partial("Head")
     @Html.Widget("mobile_head_html_tag")
     @*custom css*@
-    @Html.SmartCssFiles(ResourceLocation.Head)
+    @Html.SmartCssFiles(this.Url, ResourceLocation.Head)
     <script src="@Url.Content("~/Scripts/jquery-1.8.3.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
@@ -26,11 +26,11 @@
         });
     </script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.mobile-1.1.1.min.js")"></script>
-    @Html.SmartScripts(ResourceLocation.Head)
+    @Html.SmartScripts(this.Url, ResourceLocation.Head)
 </head>
 <body>
     @RenderBody()
-    @Html.SmartCssFiles(ResourceLocation.Foot)
-    @Html.SmartScripts(ResourceLocation.Foot)
+    @Html.SmartCssFiles(this.Url, ResourceLocation.Foot)
+    @Html.SmartScripts(this.Url, ResourceLocation.Foot)
 </body>
 </html>
