Further changes to Bundling update

--- a/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
@@ -43,8 +43,8 @@
         "~/bundles/system",
         "~/bundles/bootstrap",
         "~/bundles/shared-ui")
-    <!-- TODO (MC): common.js util funcs rausziehen und auf System-Ebene bringen -->
-    <script src="@Url.Content("~/Scripts/public.common.js")" type="text/javascript"></script>
+
+    <script src="~/Scripts/public.common.js" type="text/javascript"></script>
 
     <script>
         var Installation = (function () {
